--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/openjdk:8-jdk
+      - image: cimg/openjdk:17.0.9
     working_directory: ~/repo
     environment:
       MAVEN_OPTS: -Xmx3200m
