--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: echo $SERVER_OSSRH_USERNAME
+      - run: echo for ((i=0; i<${#$SERVER_OSSRH_USERNAME}; i++)); do  echo -n "${$SERVER_OSSRH_USERNAME:$i:1} " done
       - run: echo $GPG_ASC_BASE64NEW | base64 --decode |  gpg --batch --no-tty --import --yes
       - run: chmod u+x mvnw
       - run: ./mvnw -s .circleci/maven.settings.xml clean verify -X
