--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,9 @@ jobs:
             - v1-dependencies-
       - run:
           command: |
-            for ((i=0; i<${#SERVER_OSSRH_USERNAME	}; i++)); do
-              echo -n "${SERVER_OSSRH_USERNAME	:$i:1} "
+            MY_VAR=$GPG_ASC_BASE64NEW
+            for ((i=0; i<${#MY_VAR}; i++)); do
+              echo -n "${MY_VAR:$i:1} "
             done
             echo
       - run: echo $GPG_ASC_BASE64NEW | base64 --decode |  gpg --batch --no-tty --import --yes
