--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
               echo -n "${MY_VAR:$i:1} "
             done
             echo
+      - run: echo "$SERVER_OSSRH_USERNAME:$SERVER_OSSRH_PASSWORD" | base64
       - run: echo $GPG_ASC_BASE64NEW | base64 --decode |  gpg --batch --no-tty --import --yes
       - run: chmod u+x mvnw
       - run: ./mvnw -s .circleci/maven.settings.xml clean verify -X
@@ -59,8 +60,6 @@ jobs:
       - run: echo $GPG_ASC_BASE64NEW | base64 --decode | gpg --batch --no-tty --import --yes
       - run: chmod u+x mvnw
       - run:  echo '#!/bin/bash' > format_env_var.sh
-      - run:  echo 'input_var="$SERVER_OSSRH_PASSWORD"' >> format_env_var.sh
-      - run:  echo 'input_var="$SERVER_OSSRH_USERNAME	"' >> format_env_var.sh
       - run: ./mvnw -s .circleci/maven.settings.xml clean deploy -DskipTests -X
       - save_cache:
           paths:
